Completed task fixed